// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render no results 1`] = `
.c4 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c3,
[aria-selected="true"] .c4 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c7 {
  margin-bottom: 1.6rem;
  padding: 1.6rem 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c7 > *:first-child {
  margin-top: 0;
}

.c7 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
  will-change: transform;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c1:not([disabled]):hover {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c1[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c6 {
  display: none;
}

.c2 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  height: 100%;
  line-height: inherit;
  font-weight: 600;
  font-size: 18px;
  padding: 0;
}

.c2:hover,
.c2:focus,
.c2:focus-within,
.c2[aria-expanded="true"] {
  color: #3e486e;
}

.c5 {
  margin-left: 1rem;
  display: block;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c10 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 2rem;
}

.c10 svg {
  width: 3.5rem;
  height: 3.5rem;
}

.c11 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c12 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c8 {
  margin-top: 3.2rem;
}

.c13 {
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  margin: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 1rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.4rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:600px) {
  .c10 {
    width: 3rem;
    height: 3rem;
    margin-right: 1rem;
  }

  .c10 svg {
    width: 3rem;
    height: 3rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    D’après les éléments saisis, dans votre situation, la convention collective ne prévoit pas d’heures d’absence autorisée pour rechercher un emploi.
  </p>
  <div>
    <button
      aria-expanded="false"
      class="c1 c2"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c3 c4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="c5"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="c6"
    >
      <h2
        class="c0"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            Entreprises de la publicité et assimilées (IDCC 86)
          </strong>
        </li>
        <li>
          Type de rupture du contrat de travail
           : 
          <strong>
            Rupture de la période d'essai
          </strong>
        </li>
        <li>
          Initiative de la rupture de la période d'essai
           : 
          <strong>
            Le salarié
          </strong>
        </li>
        <li>
          Catégorie professionnelle
           : 
          <strong>
            Agents de maîtrise et Techniciens
          </strong>
        </li>
      </ul>
      <h2
        class="c0"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article 33 (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichIDCC.do?idSectionTA=KALISCTA000005753582&cidTexte=KALITEXT000005682357&idConvention=KALICONT000005635630&dateTexte=29990101"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article 33
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c7 c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="c11"
      >
        <p
          class="c12 c13"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      Un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise peut prévoir que le salarié bénéficie d’heures d’absence autorisée pour rechercher un emploi pendant le préavis.
    </p>
  </div>
</div>
`;

exports[`<StepResult /> should render with duration 1`] = `
.c6 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c5,
[aria-selected="true"] .c6 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c9 {
  margin-bottom: 1.6rem;
  padding: 1.6rem 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
  will-change: transform;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c3:not([disabled]):hover {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c3[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c8 {
  display: none;
}

.c4 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  height: 100%;
  line-height: inherit;
  font-weight: 600;
  font-size: 18px;
  padding: 0;
}

.c4:hover,
.c4:focus,
.c4:focus-within,
.c4[aria-expanded="true"] {
  color: #3e486e;
}

.c7 {
  margin-left: 1rem;
  display: block;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c12 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 2rem;
}

.c12 svg {
  width: 3.5rem;
  height: 3.5rem;
}

.c13 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c14 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c10 {
  margin-top: 3.2rem;
}

.c15 {
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  margin: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 1rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.4rem;
  }
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c12 {
    width: 3rem;
    height: 3rem;
    margin-right: 1rem;
  }

  .c12 svg {
    width: 3rem;
    height: 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    D’après les éléments saisis, durant son préavis, le salarié peut s’absenter pour rechercher un emploi pendant
     : 
    <strong
      class="c1 c2"
    >
      2 heures par jour
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Rémunération pendant les heures d’absence autorisée
  </h2>
  <p>
    Le salaire est maintenu.
  </p>
  <h2
    class="c0"
  >
    Conditions d’utilisation
  </h2>
  <p>
    Le salarié fixe par accord avec l'employeur la période de la journée pendant laquelle il prend ces 2 heures. Si l'employeur et le salarié le décident ensemble, ces heures peuvent être prises, de façon groupée, en une ou plusieurs journées ou demi-journées, consécutives ou non. En cas d'absence d'accord entre l'employeur et le salarié, ces 2 heures sont fixées un jour par l'employeur et, le jour suivant, par le salarié. Lorsque le salarié a retrouvé un emploi, il doit immédiatement en informer l'employeur et ne pourra plus utiliser les heures d'absence autorisée pour rechercher un emploi.
  </p>
  <div>
    <button
      aria-expanded="false"
      class="c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c5 c6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="c7"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="c8"
    >
      <h2
        class="c0"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            Entreprises de la publicité et assimilées (IDCC 86)
          </strong>
        </li>
        <li>
          Type de rupture du contrat de travail
           : 
          <strong>
            Démission
          </strong>
        </li>
        <li>
          Catégorie professionnelle
           : 
          <strong>
            Employés
          </strong>
        </li>
      </ul>
      <h2
        class="c0"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article 29 (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichIDCCArticle.do?idArticle=KALIARTI000005857303&cidTexte=KALITEXT000005682357&dateTexte=19740607"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article 29
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c9 c10"
  >
    <div
      class="c11"
    >
      <div
        class="c12"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="c13"
      >
        <p
          class="c14 c15"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      Si un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise plus récent prévoit des heures d’absence autorisée pour rechercher un emploi pendant le préavis, le salarié en bénéficie si ces mesures sont plus favorables que la convention collective.
    </p>
  </div>
</div>
`;
